--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,3 @@
 {
-    "livePreview.defaultPreviewPath": "/frontend/login.html",
-    "cmake.options.statusBarVisibility": "icon"
+    "liveServer.settings.port": 5501
 }
